# aaa

./: ReadMe
AlgorithmWeb/: database.db
AlgorithmWeb/home/templates/: index.html
ChinaStatus/: requirement.txt
ChinaStatus/china_status/: db.sqlite3  manage.py
ChinaStatus/china_status/china_status/: settings.py  urls.py  wsgi.py
ChinaStatus/china_status/city/: admin.py
ChinaStatus/china_status/mobile/: admin.py  models.py
ChinaStatus/china_status/province/: admin.py  views.py
Interest/: README.md  compare_and_replace.py  compare_and_write.py  extract_all_the_file_in_current_folder.py  large_num_to_multiplication.cpp
NewChinaStatus/china_status/: postgres_public_city_gdp.sql  postgres_public_province_residentincome.sql
chatroom/: ChatWindow.py  ContactWindow.py  Event.cpp  Event.h  LoginWindow.py  Makefile  MyServer.cpp  Server.cpp.bak  Server.h  client  main.py  server  t.py  tcpserver.cpp
chatroom/bak/: Login.cpp  Login.h  Socket.cpp  Socket.h  login.cpp  login.h  main.cpp  mainWindow.cpp  mainWindow.h  simple_client  simple_client_main.cpp  simple_server  simple_server_main.cpp
chatroom/gtest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  login.json  runTests  t.sh  t_Event.cpp
chatroom/test/: Server.cpp  a.out  tcpclient.cpp
cube/v1/: Makefile  main.cpp  mf.cpp  mf.h  mf_tree.h
cube/v2/: CMakeLists.txt  T_MF.cpp
hlzs/: main.py
提词器/: README.md
提词器/v1/: Makefile  main.cpp  tools.cpp  tools.h
提词器/v2/: Config.cpp  Config.h  Content.cpp  Content.h  Makefile  Render.cpp  Render.h  Unit_test.cpp  config.txt
(+13 files in other folders)
